--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
+
 language: objective-c
 osx_image: xcode7
-xcode_project: LFImageView.xcodeproj
+xcode_workspace: LFImageView.xcworkspace
 xcode_scheme: LFImageView
 
 script:
-	- xctool -project LFImageView.xcodeproj -scheme 'LFImageView' -configuration Release -sdk iphonesimulator -arch i386 build
+- xctool -workspace LFImageView.xcworkspace -scheme 'LFImageView' -configuration Release -sdk iphonesimulator -arch i386 build
 	
